Fixed word wrapping

--- a/src/main/webapp/app/videodesigns/videodesigns.scss
+++ b/src/main/webapp/app/videodesigns/videodesigns.scss
@@ -9,6 +9,7 @@
   .nav-link {
     color: #43497b;
     font-weight: 500;
+    font-size: 14px;
     border-radius: 0.45rem;
   }
   .btn-get-started {
